# erpnext_ua

./: .gitattributes  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: price-tags.md  production-runbook.md  prro-conformance.md  receipt-printing-requirements.md  receiving.md  translations.md
docs/pos/: 01-gap-analysis.md  02-architecture.md  03-data-model.md  04-state-machines.md  05-api-contracts.md  06-ui-wireframes.md  07-permissions.md  08-plan-risks-questions.md  09-testing.md  12-payment-methods.md  README.md
erpnext_ua/: hooks.py  install.py  modules.txt  print_designer_documents.py  print_designer_layout.py  print_designer_price_tags.py  print_designer_setup.py
erpnext_ua/desktop_icon/: erpnext_ukraine.json  ua_fiscal.json  ua_fop.json  ua_pos.json  ua_pos_workspace.json
erpnext_ua/locale/: uk.po
erpnext_ua/tests/: __init__.py  test_payment_entry_navigation_contracts.py  test_pos_cash_desk_bridge_contracts.py  test_pos_integration_contracts.py  test_price_tag_contracts.py  test_purchase_invoice_payment_list.js  test_receiving_contracts.py  test_translations.py  test_ua_chart_templates.py  test_ua_off_balance_entry.py
erpnext_ua/translations/: uk.csv
erpnext_ua/ua_fiscal/: fiscal_client.py  offline_fiscal.py  orchestration.py  payment.py  payment_catalog.py  receipt_format.py  recovery.py  sales_invoice.py  xml_builder.py
erpnext_ua/ua_fop/: income_monitor.py  tax_calendar.py  taxpayer_cabinet.py
erpnext_ua/ua_payments/: __init__.py  (+1 more)
tools/: build_uk_translation_catalog.py  uk_translation_overrides.csv
(+104 files in other folders)
