[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erpnext_ua"
version = "0.8.0"
description = "ERPNext Ukraine business layer: FOP, POS, PRRO, accounting, documents, price tags and translations"
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "qrcode>=8.0,<9",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
erpnext_ua = [
    "**/*.csv",
    "**/*.html",
    "**/*.js",
    "**/*.json",
    "**/*.po",
    "**/*.svg",
    "**/*.txt",
    "**/*.xsd",
    "**/*.css",
]

[tool.setuptools.packages.find]
include = ["erpnext_ua*"]
exclude = ["public*", "docs*", "tests*"]

[tool.black]
line-length = 120
